# linq_tool

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
linq/: __init__.py  linq.py
tests/: test_linq.py
