[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
write_to = "linq_tool/_version.py"

[project]
name = "linq_tool"
version = "0.1.7"
description = "A tool for LINQ-like operations in Python"
authors = [{ name = "Zozimo Fernandez", email = "zozi.fer96@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/Zozi96/linq_tool"
"Source" = "https://github.com/Zozi96/linq_tool"
"Tracker" = "https://github.com/Zozi96/linq_tool/issues"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
